--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gruppe 13 spill</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+    <h1 id="timer"></h1>
+    <h1 id="poeng"></h1>
     <h1>Gruppe 13 spill</h1>
     <button id="start-spill">Start spill</button>
     <div id="spill">
         <h2 id="kundePizza"></h2>
+        <div id="pizza"></div>
     </div>
     <h1 id="spillRes"></h1>
     <script type="module" src="/js/index.js"></script>
