--- a/instruksjoner.html
+++ b/instruksjoner.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../gruppe13/css/index.css">
-    <link rel="stylesheet" href="../gruppe13/css/css.css"
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/css.css"
 </head>
 <body>
     <h1>Instruksjoner</h1>
