--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button id="start-spill">Start spill</button>
         <h2 id="kundePizza"></h2>
         <div id="pizza"></div>
+        <div class="figur-container"></div>
         <div class="ingrediens-knapper"></div>
         <h1 id="spillRes"></h1>
     </div>
