--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="./css/css.css">
 </head>
 <body>
-    <img src="./img/restaurant.png" alt="" class="background">
+    <img src="./img/restaurant-bakgrunn.png" alt="" class="background b0">
+    <img src="./img/restaurant-forgrunn.png" alt="" class="background b1">
     <div class="spill-container">
         <div class="timer-container">
             <p class="timer-text"></p>
@@ -21,10 +22,10 @@
         <button id="start-spill">Start spill</button>
         <h2 id="kundePizza"></h2>
         <div id="pizza"></div>
-        <div class="figur-container"></div>
         <div class="ingrediens-knapper"></div>
         <h1 id="spillRes"></h1>
     </div>
+    <div class="figur-container"></div>
     <script type="module" src="/js/index.js"></script>
 </body>
 </html>
