--- a/hjem.html
+++ b/hjem.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <div class="center">
-        <a href="spillny.html">
+        <a href="index.html">
             <button class="button">Start spill</button>
         </a>
         </div>
