--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         </div>
 
         <button onclick="document.location='hjem.html'">Hjem</button>
-        
+        <button id="muteKnapp"></button>
+        <button id="playPauseKnapp"></button>
+
         <h1 class="poeng"></h1>
         <h1>Gruppe 13 spill</h1>
         <button id="start-spill">Start spill</button>
