--- a/hjem.html
+++ b/hjem.html
@@ -8,8 +8,7 @@
     <title>Gruppe 13 spill</title>
 </head>
 <body>
-    <h1>GRUPPE 13 SPILL</h1>
-
+    <img src="./img/restaurant-utside.png" alt="" class="background b0">
     <div class="container">
         <div class="center">
         <a href="index.html">
@@ -27,11 +26,9 @@
 
     <div class="highscore-container">
         <label for="navn">Navnet ditt:</label>
-        <input name="navn" type="text">
+        <input name="navn" id="navn-input" type="text">
         <button id="registrer-bruker">Registrer</button>
-        <button id="registrer-bruke">Registrer</button>
-        <button id="registrer-brke">Registrer</button>
-        <ol id="highscores">
+        <ol class="highscores">
             <h2>Highscore</h2>
         </ol>
     </div>
