--- a/index.html
+++ b/index.html
@@ -18,19 +18,26 @@
             <p class="timer-text"></p>
             <div class="timer-bar"></div>
         </div>
-        <i onclick="document.location='hjem.html'" class="ri-home-2-fill spill-knapp"></i>
-        <i class="ri-volume-up-fill spill-knapp" id="mute"></i>
-        <i class="ri-pause-circle-fill spill-knapp" id="pause"></i>
+        <div class="ikoner">
+            <i onclick="document.location='hjem.html'" class="ri-home-2-fill spill-knapp"></i>
+            <i class="ri-volume-up-fill spill-knapp" id="mute"></i>
+            <i class="ri-pause-circle-fill spill-knapp" id="pause"></i>
+        </div>
 
         <h1 class="poeng"></h1>
-        <button id="start-spill">Start spill</button>
+        <img src="./img/ikoner/start-spill-knapp.png" alt="Start Spill" class="start-spill" id="start-spill"/>
         <h2 id="kundePizza"></h2>
         <div id="pizza"></div>
         <div class="ingrediens-container"></div>
-        <h1 id="spillRes"></h1>
+        <div class="game-over">
+            <p id="spill-res"></p>
+            <img src="./img/ikoner/start-spill-knapp.png" alt="Start Spill" class="start-spill s-spill-knapp" id="restart-spill"/>
+        </div>
     </div>
     <div class="figur-container"></div>
     <script type="module" src="./js/index.js"></script>
-    
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 </body>
 </html>
