--- a/hjem.html
+++ b/hjem.html
@@ -19,8 +19,8 @@
 
     
     <div class="tab">
-        <a href="instruksjoner.html" class="buttonlink1">Instruksjoner</a>
-        <a href="om.html" class="buttonlink2">Om oss</a>
+        <a href="instruksjoner.html" class="button">Instruksjoner</a>
+        <a href="om.html" class="button">Om oss</a>
     </div>
 
 
