--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Gruppe 13 spill</title>
     
     <link rel="stylesheet" href="./css/spill.css">
-    <link rel="stylesheet" href="./css/css.css">
+    <!-- <link rel="stylesheet" href="./css/css.css"> -->
 </head>
 <body>
     <img src="./img/restaurant-bakgrunn.png" alt="" class="background b0">
