--- a/instruksjoner.html
+++ b/instruksjoner.html
@@ -23,12 +23,22 @@
             fortsetter å komme nye kunder inn helt til tiden er ute.
             </p>
             <p>For hver pizza du lager riktig får du to ekstra sekunder.
-                For å øke konkurransenivået i spillet mister du tre sekunder for hver
+                For å øke konkurransenivået i spillet mister du to sekunder for hver
                 pizza du lager feil. </p>
             <p>Spillet er over når tiden er ute.</p>
 
             <h3>Systemkrav</h3>
-            
+            <p>
+                - Google Chrome 78 eller nyere
+                <br>
+                - Safari 11.0.1 eller nyere
+                <br>
+                - Mozilla Firefox 62 eller nyere
+                <br>
+                - Opera 64 eller nyere
+                <br>
+                - 900 x 600 pixeler eller større anbefalt
+            </p>
 
         </div>
 
