--- a/hjem.html
+++ b/hjem.html
@@ -8,7 +8,8 @@
     <title>Gruppe 13 spill</title>
 </head>
 <body>
-    <h1>GRUPPE 13 SPILL</h1>
+    <br>
+    <h1>NTNU Pizzeria</h1>
 
     <div class="container">
         <div class="center">
