--- a/instruksjoner.html
+++ b/instruksjoner.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/css.css"
+    <link rel="stylesheet" href="../gruppe13/css/index.css">
+    <link rel="stylesheet" href="./css/css.css">    
 </head>
 <body>
-    <h1>Instruksjoner</h1>
+    <h1>Instruksjoner</h1><br>
     <div class="container">
        
 
@@ -16,17 +16,19 @@
             <h3>Instruksjoner</h3>
             <p>Start spillet ved å trykke på "Start spill". </p>
             <p>Når spillet er igang starter en nedtelling på 30 sekunder.</p>
-            <p>
+            <p><br>
             En kunde kommer først inn med en pizzabestilling.
             Din oppgave er å lage pizzaen med ingrediensene kunden vil ha
-            i riktig rekkefølge. Dette gjør du ved å trykke på ingrediensene.
-            </p>
+            i riktig rekkefølge. Dette gjør du ved å trykke på ingrediensene som ligger
+            på disken.
+            </p><br>
             <p>Når den første kundens pizza er ferdig, kommer en ny kunde inn. Det
-            fortsetter å komme nye kunder inn helt til tiden er ute.
-            </p>
+            fortsetter å komme nye kunder inn med nye pizzabestillinger 
+            helt til tiden er ute.
+            </p><br>
             <p>For hver pizza du lager riktig får du to ekstra sekunder.
                 For å øke konkurransenivået i spillet mister du tre sekunder for hver
-                pizza du lager feil. </p>
+                pizza du lager feil. </p><br>
             <p>Spillet er over når tiden er ute.</p>
 
             <h3>Systemkrav</h3>
