--- a/hjem.html
+++ b/hjem.html
@@ -12,7 +12,7 @@
     <img src="./img/restaurant-utside.png" alt="" class="background b0">
     <div class="container">
         <div class="center">
-        <a href="index.html">
+        <a href="spill.html">
             <button class="button">Start spill</button>
         </a>
         </div>
