--- a/om.html
+++ b/om.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/css.css">
+        <link rel="stylesheet" href="./css/index.css">
     </head>
     <body>
         <div class="instruksjoncontainer">
@@ -23,11 +23,6 @@
                 Mahmood og Line. 
 
             </p>
-
-
-
-            
-
             <h3>Kontakt oss</h3>
             <p>Daniel: <br>
                 <span style="font-style:italic;">Mail: daniehav@stud.ntnu.no</span></p>
@@ -40,9 +35,8 @@
 
         </div>
 
-
         <div class="leftcorner">
-            <a href="hjem.html">
+            <a href="index.html">
                 <button class="buttontilbake">Tilbake</button>
             </a>
         </div>
